@@ -1,4 +1,5 @@
 use strict;
+use warnings;
 
 use Test::More;
 plan tests => 22;
