@@ -2,6 +2,8 @@ Revision history for Perl module XML::RSS
 
        - Added a Module::Build-based Build.PL so we'll have an easier time 
        with the META.yml and the Kwalitee.
+       - Kwalitee - added "use warnings" to all Perl files.
+            - now depending on at least perl-5.6.0.
 
 1.34 - September 12, 2008
        - fixed a typo in the documentation of lib/XML/RSS.pm - 
